--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -8,24 +8,24 @@ on:
 jobs:
   build-deploy:
     name: Build and deploy docs
-
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Set up Python 3 ⚙️ 🐍
-        uses: actions/setup-python@v2
+      - name: Set up Python ⚙️ 🐍
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
 
       - name: Cache dependencies 💾
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('docs/requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
-            ${{ runner.os }}-
 
       - name: Install dependencies 🔧
         working-directory: docs
